--- a/Beginner Projects/todo app/index.html
+++ b/Beginner Projects/todo app/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="todo-app">
+            <div class="input-button">
+                <input type="text" placeholder="Create your task here ">
+                <button type="button">Add</button>
+            </div>
+            <div class="todo-list">
+                <ul>
+                    <div class="list-box">
+                        <input type="radio">
+                        <li class="checked">Todo 1</li>
+                        <div class="buttons">
+                            <button>Delete</button>
+                            <button>Edit</button>
+                        </div>
+                    </div>
+                    <div class="list-box">
+                        <input type="radio">
+                        <li>Todo 1</li>
+                        <div class="buttons">
+                            <button>Delete</button>
+                            <button>Edit</button>
+                        </div>
+                    </div>
+                    <div class="list-box">
+                        <input type="radio">
+                        <li>Todo 1</li>
+                        <div class="buttons">
+                            <button>Delete</button>
+                            <button>Edit</button>
+                        </div>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
