todo functional implementation in progress

--- a/Beginner Projects/todo app/index.html
+++ b/Beginner Projects/todo app/index.html
@@ -11,8 +11,8 @@
         <section class="todo-app">
             <!-- Input Section -->
             <div class="todo-input">
-                <input type="text" class="todo-input__field" placeholder="Create your task here">
-                <button type="button" class="todo-input__button">Add</button>
+                <input type="text" id="todoInput" class="todo-input__field" placeholder="Create your task here">
+                <button type="button" class="todo-input__button" onclick="handleCreateTodo()">Add</button>
             </div>
 
             <!-- Todo List Section -->
